deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
        - name: php-container
          image: eu.gcr.io/training-318205/training-1@sha256:40c63bbeafc2a99f08f241d57205fd92ddbe52db5bd80d433dff681cfc0be945
---
apiVersion: v1
kind: Service
metadata:
  name: php-service
spec:
  type: NodePort
  selector:
    app: php
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30008
