ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: ambassador
  name: quote-ingress
  namespace: default
spec:
  rules:
   - http:
       paths:
       - path: /*
         backend:
           serviceName: php-service 
           servicePort: 80
